[css] fix collection spacing and overlap
GH-623
DIGREPO-480

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -607,30 +607,40 @@ label.remove_time_span {
 }
 
 .documentHeader {
-  position: relative;
-  h3 {
-    font-size: 100%;
-  }
+  clear: both;
 }
+// Ridiculous specificity to override Blacklight
+#documents .documentHeader h3.document-title-heading {
+  width: 75%;
+  font-size: 100%;
+  margin: 0;
+  display: inline-block;
+}
+
 .index-document-functions {
+  float: right;
   overflow: hidden;
   width: 100%;
 
-  border: 1px solid #ddd;
-  background-color: #f5f5f5;
-  border-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
   .checkbox {
+    background-color: #f5f5f5;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
     padding: 5px;
     text-align: center;
   }
 }
-
 @media screen and (min-width: $breakpoint3) {
+  .documentHeader {
+    padding-bottom: 1em;
+  }
+  .document-metadata {
+    padding-top: 1em;
+  }
+
   .index-document-functions {
     max-width: 20%;
-    position: absolute;
-    right: 0;
   }
 }
 
